objects/HW_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWT_Date__c</fullName>
        <label>HWT Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>HW Assignments</relationshipLabel>
        <relationshipName>HW_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>HW Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Section__c</columns>
        <columns>HWT_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HW-{000000}</displayFormat>
        <label>HW Assign. ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HW Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>